# Sea-urchin-robot-RL

./: README.md  SAC-main.py  env.py  load.py  model.py  replay_memory.py  sac_agent.py  terrain.py  xin_12zu.urdf
record data - net/: weights_actor_final_-45.9.pth  weights_actor_final_205.11.pth  weights_critic_final_-45.9.pth  weights_critic_final_205.11.pth
record data - reward/: 1-process-data-scores.xls  2-process-data-avg_scores.xls  3-process-data-test_scores_array.xls  final-1-scores.xls  final-2-agv_scores.xls  final-3-test-scores.xls
xin_12zu/: 1-process-data-scores.xls  2-process-data-avg_scores.xls  3-process-data-test_scores_array.xls  CMakeLists.txt  package.xml
xin_12zu/config/: joint_names_xin_12zu.yaml
xin_12zu/launch/: display.launch  gazebo.launch
xin_12zu/meshes/: Empty_Link1.STL  Empty_Link10.STL  Empty_Link11.STL  Empty_Link12.STL  Empty_Link2.STL  Empty_Link3.STL  Empty_Link4.STL  Empty_Link5.STL  Empty_Link6.STL  Empty_Link7.STL  Empty_Link8.STL  Empty_Link9.STL  base_link.STL
xin_12zu/urdf/: xin_12zu.csv  xin_12zu.urdf
